test/errors/classes/class_missing_constructor_fail.hy
// EXPECT_DIAGNOSTIC: Class 'MissingCtor' must declare at least one constructor
class MissingCtor
{
    int value
}

// expect: Class 'MissingCtor' must declare at least one constructor
